# python-spreadsheets

./: .editorconfig  .flake8  .mypy.ini  .pre-commit-config.yaml  README.md  pyproject.toml  schema.graphql
python_spreadsheets/: __main__.py  api.py  calculator.py  cli.py
python_spreadsheets/api/: __main__.py  application.py  cli.py  graphene_types.py
python_spreadsheets/engine/: calculation_context.py  formula_calculator.py  loaders.py  spreadsheet_calculator.py  spreadsheet_helpers.py  types.py
spreadsheet_engine/: __main__.py  api.py  calculator.py  cli.py  graphene_types.py  main.py
tests/: test_api.py  test_caclulation_context.py  test_formula_calculator.py  test_spreadsheet.py  test_spreadsheet_calculator.py  test_spreadsheet_engine.py  test_spreadsheet_helpers.py
tests/spreadsheet_cases/related_formulas/: expected.tsv
tests/spreadsheet_cases/simple_cell_types/: expected.tsv  input.tsv
tests/spreadsheet_cases/simple_formulas/: expected.tsv  input.tsv
tests/spreadsheet_cases/sum_formula/: expected.tsv  input.tsv
