[tool.poetry]
name = "spreadsheet-engine"
version = "0.1.0"
description = ""
authors = ["Aleksey Negramotnov <aleksey.negramotnov@nexign.com>"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
