[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "python-spreadsheets"
version = "0.1.0"
description = ""
authors = ["Aleksey Negramotnov <anegramotnov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
starlette = "^0.13.7"
graphene = "^2.1.8"
uvicorn = "^0.11.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"
flake8 = "^3.8.3"
flake8-bugbear = "^20.1.4"
flake8-builtins = "^1.5.3"
flake8-debugger = "^3.2.1"
flake8-comprehensions = "^3.2.3"
flake8-mutable = "^1.2.0"
flake8-pep3101 = "^1.3.0"
flake8-string-format = "^0.3.0"
flake8-quotes = "^3.2.0"
flake8-docstrings = "^1.5.0"
flake8-isort = "4.0.0a0"
mypy = "^0.782"
pre-commit = "^2.6.0"
pytest-cov = "^2.10.0"
coverage = {extras = ["toml"], version = "^5.2.1"}
commitizen = "^2.1.0"
import-linter = "^1.1"
isort = "^5.3.2"
astpretty = "^2.0.0"

[tool.poetry.scripts]
update_schema = "python_spreadsheets.api.cli:update_schema"
print_schema = "python_spreadsheets.api.cli:print_schema"

[tool.isort]
default_section = "FIRSTPARTY"
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
known_first_party = ["python_spreadsheets"]
atomic = true
indent = 4
line_length = 88
multi_line_output = 3  # Vertical Hanging Indent
include_trailing_comma = true

[tool.coverage.run]
branch = true
parallel = true
source = ["python_spreadsheets/"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 95
omit = ["python_spreadsheets/api/cli.py", "python_spreadsheets/api/__main__.py"]
